--- a/about.html
+++ b/about.html
@@ -2,18 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Nathan Ash Portfolio Website</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
-
+    <title>About Nathan Ash</title>
     <link href="https://fonts.googleapis.com/css?family=Jura|Krona+One|Playfair+Display+SC" rel="stylesheet">
     <link href="bootstrap.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">N/Ash</a>
-  <img class="portrait" src="images/N_Ash.JPG" alt="Nathan Ash">
+  <a class="navbar-brand" href="index.html">N/Ash</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,21 +32,26 @@
     </form> -->
   </div>
 </nav>
-
-    <h1><b>Nathan J. Ash</b></h1>
-    <section class="wrapper">
-      <div class="horizontalFlip">  <!-- <div class="container-fluid header"> -->
-      <span><h3>web developer</h3></span>
-      <span><h3>educator</h3></span>
-      <span><h3>all around good guy</h3></span>
-      <span><h3>communicator</h3></span>
-    </div>
-    <br>
-    </section>
-    <!-- </div> -->
-    <div class="container-fluid">
-      <p>Thank you for taking a moment to learn more about me and what I do -- N.Ash </p>
-    </div>
+  <div class="text-block">
+    <h2>Professionally...</h2>
+    <p class="about-me">I had a wonderful career as an elementary school teacher for the last thirteen years and am now eagerly seeking new professional challenges as a web developer.  During my time as a teacher, I felt increasingly drawn towards a career in technology.  This past summer, I resigned from my full-time teaching position so that I could focus on learning web development and how to write code. I enjoyed the challenges and growth I experienced as a teacher, but my focus is squarely set on moving forward to a career in technology.
+    </p>
+  </div>
+    <h4>Skills:</h4>
+    <ul>
+      <li>project management</li>
+      <li>classroom instruction</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>jQuery -- React</li>
+      <li>Node.js</li>
+    </ul>
+  <div class="text-block">
+    <h2>Personally...</h2>
+    <p class="about-me">In addition to my professional passions for education and technology, I have many personal passions as well. I have been happily married for nineteen years and have two amazing teenage daughters.  Spending time with my family is the number one thing I enjoy. Together, we love traveling, camping, hiking, eating, playing sports and watching movies. I am also an avid reader of fiction and lately...books about coding. I love to ride my bike and play frisbee with my Australian Cattle dog. I consider myself incredibly lucky and am grateful for all I have in my life.
+   </p>
+ </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
