--- a/projects.html
+++ b/projects.html
@@ -2,18 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Nathan Ash Portfolio Website</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
-
+    <title>About Nathan Ash</title>
     <link href="https://fonts.googleapis.com/css?family=Jura|Krona+One|Playfair+Display+SC" rel="stylesheet">
     <link href="bootstrap.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">N/Ash</a>
-  <img class="portrait" src="images/N_Ash.JPG" alt="Nathan Ash">
+  <a class="navbar-brand" href="index.html">N/Ash</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,27 +26,24 @@
         <a class="nav-link" href="projects.html">Projects</a>
       </li>
     </ul>
-    <!-- <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
   </div>
-</nav>
-
-    <h1><b>Nathan J. Ash</b></h1>
-    <section class="wrapper">
-      <div class="horizontalFlip">  <!-- <div class="container-fluid header"> -->
-      <span><h3>web developer</h3></span>
-      <span><h3>educator</h3></span>
-      <span><h3>all around good guy</h3></span>
-      <span><h3>communicator</h3></span>
+    </nav>
+  <div class="container">
+  <div class="row">
+    <div class="col project">
+      <h3>North Carolina State Symbol Quiz</h3>
+      <p>Uses: HTML, CSS, JavaScript, jQuery</p>
+      <br>
+      <a href="https://cactusnate22.github.io/NC-quiz-app/" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">TAKE A PEEK!</a>
     </div>
-    <br>
-    </section>
-    <!-- </div> -->
-    <div class="container-fluid">
-      <p>Thank you for taking a moment to learn more about me and what I do -- N.Ash </p>
+    <div class="col project">
+      <h3>A Tale of Two Cities: Weather Comparison App</h3>
+      <p>Uses: HTML, CSS, JavaScript, jQuery</p>
+      <br>
+      <a href="https://cactusnate22.github.io/weather-search/" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">TAKE A PEEK!</a>
     </div>
+  </div>
+</div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
