changed rotating words

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       <div class="horizontalFlip">  <!-- <div class="container-fluid header"> -->
       <span><h3>web developer</h3></span>
       <span><h3>educator</h3></span>
-      <span><h3>all around good guy</h3></span>
-      <span><h3>communicator</h3></span>
+      <span><h3>learner</h3></span>
+      <span><h3>critical thinker</h3></span>
+      <span><h3>problem solver</h3></span>
     </div>
     <br>
     </section>
